apps/robot-shop/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: robot-shop-gateway
  namespace: robot-shop
  labels:
    app.kubernetes.io/name: robot-shop-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: http-listener
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      hostname: robot-shop.fabiosantos.cloudns.be
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: robot-shop-cert-tls
