apps/robot-shop/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-http-route
  namespace: robot-shop
spec:
  parentRefs:
    - name: robot-shop-gateway
  hostnames:
    - "robot-shop.fabiosantos.cloudns.be"
  rules:
    - backendRefs:
        - name: web
          port: 8080
